--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Webpack 4</title>
+    <title>Urban Life Brand Clothing Line</title>
 </head>
 <body>
-        <h1>Your Webpack installation is working</h1>
-        <img src="./assets/media/bear.jpg" alt="bear">
-        <img src="./assets/media/kiwi.svg" alt="kiwi">
-        <audio controls>
-            <source src="./assets/media/horse.ogg" type="audio/ogg">
-          Your browser does not support the audio element.
-          </audio>
-    
+
 </body>
 </html>
