html mobile setup

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Urban Life Brand Clothing Line</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 <body>
+    <main class="page-container">
+        <div class="promo-banner">
+            <p>Sign up for our email updates and receive 15% off your first ULB order!</p>
+        </div>
+        <nav class="navbar-container">
+            <div class="hamburger">
+                   <a href="#"><i class="fas fa-bars fa-lg"></i></a>
+            </div>
+            <div class="logo-bar">
+                <a href="#">
+                    <h3>Urban Life</h3>
+                    <h4>Brand</h4>
+                </a>
+            </div>
+            <div class="shopping-cart">
+                <a href="#"><i class="fas fa-shopping-cart fa-sm"></i></a>  
+            </div>          
+        </nav>
+        <section class="hero">
+            <img class="hero-images" src="assets/media/images/hero.png" alt="female models in alley" width="1280" height="1024">
+            <div class="brand-1">
+
+            </div>
+        </section>
+        <section class="lookbook">
+            <div >
+                    <img class="look-images" src="assets/media/images/fashion-1835871_1920.jpg" alt="female models in alley" width="1280" height="1024">
+            </div>
+            <div class="lb-text">
+
+            </div>
+        </section>
+        <section class="shop">
+            <div class="title">
+                <h4></h4>
+                <h3></h3>
+            </div>
+            <div class="product-images">
+
+            </div>
+        </section>
+        <footer class="footer">
+            <h3 class="footer-quote">
+
+            </h3>
+            <div class="footer-form">
+
+            </div>
+            
+        </footer>
+
+    </main>
 
 </body>
 </html>
