--- a/src/index.html
+++ b/src/index.html
@@ -37,17 +37,64 @@
                     <img class="look-images" src="assets/media/images/fashion-1835871_1920.jpg" alt="female models in alley" width="1280" height="1024">
             </div>
             <div class="lb-text">
-
+                <p>Spring 2019 Lookbook</p>
             </div>
         </section>
-        <section class="shop">
-            <div class="title">
-                <h4></h4>
-                <h3></h3>
+        <section class="catalog">
+            <div class="catalog-header">
+                <h4>Shop</h4>
+                <p>Select A Category</p>
             </div>
-            <div class="product-images">
-
-            </div>
+            <div class="catalog-grid by-three">
+                <div class="product-container">
+                    <div class="catalog-content">
+                        <a href="#">
+                            <img src="" alt="" title="">
+                            <div class="name">Photo Name</div>
+                        </a>                      
+                    </div>
+                </div>
+                <div class="product-container">
+                    <div class="catalog-content">
+                        <a href="#">
+                            <img src="" alt="" title="">
+                            <div class="name">Photo Name</div>
+                        </a>                      
+                    </div>
+                 </div>
+                 <div class="product-container">
+                    <div class="catalog-content">
+                        <a href="#">
+                            <img src="" alt="" title="">
+                            <div class="name">Photo Name</div>
+                        </a>                      
+                    </div>
+                </div>
+                <div class="product-container">
+                    <div class="catalog-content">
+                        <a href="#">
+                            <img src="" alt="" title="">
+                            <div class="name">Photo Name</div>
+                        </a>                      
+                    </div>
+                </div>
+                <div class="product-container">
+                    <div class="catalog-content">
+                        <a href="#">
+                            <img src="" alt="" title="">
+                            <div class="name">Photo Name</div>
+                        </a>                      
+                    </div>
+                    </div>
+                    <div class="product-container">
+                    <div class="catalog-content">
+                        <a href="#">
+                            <img src="" alt="" title="">
+                            <div class="name">Photo Name</div>
+                        </a>                      
+                    </div>
+                </div>
+            </div>    
         </section>
         <footer class="footer">
             <h3 class="footer-quote">
