--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         </section>
         <section class="lookbook">
             <div >
-                    <img class="look-images" src="assets/media/images/fashion-1835871_1920.jpg" alt="female models in alley" width="1280" height="1024">
+                    <img class="look-images" src="" alt="male model in sunglasses" width="1280" height="1024">
             </div>
             <div class="lb-text">
                 <p>Spring 2019 Lookbook</p>
@@ -49,25 +49,9 @@
                 <div class="product-container">
                     <div class="catalog-content">
                         <a href="#">
-                            <img src="" alt="" title="">
+                            <img src="assets/media/images/redcoat-boots.jpeg" alt="female model walking" title="Blazers" width="1280" height="1910">
                             <div class="name">Photo Name</div>
-                        </a>                      
-                    </div>
-                </div>
-                <div class="product-container">
-                    <div class="catalog-content">
-                        <a href="#">
-                            <img src="" alt="" title="">
-                            <div class="name">Photo Name</div>
-                        </a>                      
-                    </div>
-                 </div>
-                 <div class="product-container">
-                    <div class="catalog-content">
-                        <a href="#">
-                            <img src="" alt="" title="">
-                            <div class="name">Photo Name</div>
-                        </a>                      
+                        </a>                   
                     </div>
                 </div>
                 <div class="product-container">
@@ -85,8 +69,24 @@
                             <div class="name">Photo Name</div>
                         </a>                      
                     </div>
+                </div>
+                <div class="product-container">
+                    <div class="catalog-content">
+                        <a href="#">
+                            <img src="" alt="" title="">
+                            <div class="name">Photo Name</div>
+                        </a>                      
                     </div>
-                    <div class="product-container">
+                </div>
+                <div class="product-container">
+                    <div class="catalog-content">
+                        <a href="#">
+                            <img src="" alt="" title="">
+                            <div class="name">Photo Name</div>
+                        </a>                      
+                    </div>
+                </div>
+                <div class="product-container">
                     <div class="catalog-content">
                         <a href="#">
                             <img src="" alt="" title="">
@@ -98,15 +98,10 @@
         </section>
         <footer class="footer">
             <h3 class="footer-quote">
-
             </h3>
             <div class="footer-form">
-
-            </div>
-            
+            </div>        
         </footer>
-
     </main>
-
 </body>
 </html>
