folder change-images

--- a/src/index.html
+++ b/src/index.html
@@ -26,15 +26,15 @@
                 <a href="#"><i class="fas fa-shopping-cart fa-sm"></i></a>  
             </div>          
         </nav>
-        <section class="hero">
+        <!-- <section class="hero">
             <img class="hero-images" src="assets/media/images/hero.png" alt="female models in alley" width="1280" height="1024">
             <div class="brand-1">
 
             </div>
-        </section>
-        <section class="lookbook">
+        </section> -->
+        <!-- <section class="lookbook">
             <div >
-                    <img class="look-images" src="" alt="male model in sunglasses" width="1280" height="1024">
+                <img class="look-images" src="assets/media/images/fashion-1835871_1920.jpg" alt="male model in sunglasses" width="1280" height="1024">
             </div>
             <div class="lb-text">
                 <p>Spring 2019 Lookbook</p>
@@ -95,7 +95,7 @@
                     </div>
                 </div>
             </div>    
-        </section>
+        </section> -->
         <footer class="footer">
             <h3 class="footer-quote">
             </h3>
