--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 <body>
-    <main class="page-container">
+    <!-- <main class="page-container">
         <div class="promo-banner">
             <p>Sign up for our email updates and receive 15% off your first ULB order!</p>
         </div>
@@ -26,10 +26,9 @@
                 <a href="#"><i class="fas fa-shopping-cart fa-sm"></i></a>  
             </div>          
         </nav>
-        <!-- <section class="hero">
-            <img class="hero-images" src="assets/media/images/hero.png" alt="female models in alley" width="1280" height="1024">
+        <section class="hero">
+            <img class="hero-images" src="src/assets/media/hero.png" alt="female models in alley" width="1280" height="1024">
             <div class="brand-1">
-
             </div>
         </section> -->
         <!-- <section class="lookbook">
@@ -45,63 +44,13 @@
                 <h4>Shop</h4>
                 <p>Select A Category</p>
             </div>
-            <div class="catalog-grid by-three">
-                <div class="product-container">
-                    <div class="catalog-content">
-                        <a href="#">
-                            <img src="assets/media/images/redcoat-boots.jpeg" alt="female model walking" title="Blazers" width="1280" height="1910">
-                            <div class="name">Photo Name</div>
-                        </a>                   
-                    </div>
-                </div>
-                <div class="product-container">
-                    <div class="catalog-content">
-                        <a href="#">
-                            <img src="" alt="" title="">
-                            <div class="name">Photo Name</div>
-                        </a>                      
-                    </div>
-                </div>
-                <div class="product-container">
-                    <div class="catalog-content">
-                        <a href="#">
-                            <img src="" alt="" title="">
-                            <div class="name">Photo Name</div>
-                        </a>                      
-                    </div>
-                </div>
-                <div class="product-container">
-                    <div class="catalog-content">
-                        <a href="#">
-                            <img src="" alt="" title="">
-                            <div class="name">Photo Name</div>
-                        </a>                      
-                    </div>
-                </div>
-                <div class="product-container">
-                    <div class="catalog-content">
-                        <a href="#">
-                            <img src="" alt="" title="">
-                            <div class="name">Photo Name</div>
-                        </a>                      
-                    </div>
-                </div>
-                <div class="product-container">
-                    <div class="catalog-content">
-                        <a href="#">
-                            <img src="" alt="" title="">
-                            <div class="name">Photo Name</div>
-                        </a>                      
-                    </div>
-                </div>
-            </div>    
-        </section> -->
+        </section>
         <footer class="footer">
             <h3 class="footer-quote">
             </h3>
             <div class="footer-form">
             </div>        
         </footer>
-    </main>
+    </main> --> 
 </body>
-</html>
+</html> 
