--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 <body>
-    <!-- <main class="page-container">
+    <main class="page-container">
         <div class="promo-banner">
             <p>Sign up for our email updates and receive 15% off your first ULB order!</p>
         </div>
@@ -27,11 +27,11 @@
             </div>          
         </nav>
         <section class="hero">
-            <img class="hero-images" src="src/assets/media/hero.png" alt="female models in alley" width="1280" height="1024">
+            <img class="hero-images" src="../assets/media/hero.png" alt="female models in alley" width="1280" height="1024">
             <div class="brand-1">
             </div>
-        </section> -->
-        <!-- <section class="lookbook">
+        </section> 
+        <section class="lookbook">
             <div >
                 <img class="look-images" src="assets/media/images/fashion-1835871_1920.jpg" alt="male model in sunglasses" width="1280" height="1024">
             </div>
@@ -51,6 +51,6 @@
             <div class="footer-form">
             </div>        
         </footer>
-    </main> --> 
+    </main> 
 </body>
 </html> 
