image issue resolved

--- a/src/index.html
+++ b/src/index.html
@@ -27,13 +27,13 @@
             </div>          
         </nav>
         <section class="hero">
-            <img class="hero-images" src="../assets/media/hero.png" alt="female models in alley" width="1280" height="1024">
+            <img class="hero-images" src="assets/images/hero.png" alt="female models in alley" width="1280" height="1024">
             <div class="brand-1">
             </div>
         </section> 
         <section class="lookbook">
             <div >
-                <img class="look-images" src="assets/media/images/fashion-1835871_1920.jpg" alt="male model in sunglasses" width="1280" height="1024">
+                <img class="look-images" src="assets/images/lb-hero.jpg" alt="male model in sunglasses" width="1280" height="1024">
             </div>
             <div class="lb-text">
                 <p>Spring 2019 Lookbook</p>
