--- a/src/index.html
+++ b/src/index.html
@@ -43,18 +43,42 @@
             <div class="catalog-header">
                 <h4>Shop</h4>
                 <p>Select A Category</p>
-            </div>
-
-
-
-
-
-            
+            </div>           
         </section>
+        <div class="shop-products-cta">
+            <p>Shop all products</p>
+        </div>
         <footer class="footer">
-            <h3 class="footer-quote">
-            </h3>
+                <cite class="footer-quote">
+                    My aim is to make the poor look rich and the rich look poor.</cite>
             <div class="footer-form">
+                <h4>Stay in touch</h4>
+                <form class="input-container">
+                    <input type="email" placeholder=" Enter you Email" name="EMAIL" id="Email"><button type="submit">submit</button>
+                    <input type="tel" placeholder=" Enter you Number" name="PhoneNumber"
+                    value required= "required" id="PhoneNumber"><button type="submit">submit</button>
+                </form>
+                <div class="updates">
+                    <p>Get updates through email or sms</p>
+                </div>
+                <div class="top-link">
+                    <a href="#top">
+                        <div class="take-me">Take me</div>
+                        <div class="back-top">Back to the top</div>
+                        <div class="up-arrow">
+                                <i class="fas fa-chevron-up"></i>
+                        </div>
+                    </a>
+                </div>
+                <div class="soc-media">
+                        <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
+                        <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
+                        <a href="https://www.pinterest.com" target="_blank"><i class="fab fa-pinterest fa-lg"></i></a>
+                        <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
+                </div>
+                <div class="copy-right">
+                    <p>&copy;ErickaROdom 2019 All rights reserved</p>
+                </div>
             </div>        
         </footer>
     </main> 
