modify photo ext

--- a/src/index.html
+++ b/src/index.html
@@ -43,14 +43,24 @@
             <div class="catalog-header">
                 <h4>Shop</h4>
                 <p>Select A Category</p>
-            </div>           
+            </div>
+            <div class="product-carousel" id="carousel">
+                <div class="three-across">
+                    <div class="product-1">
+                        <a href#>
+                         <img src="assets/images/wristcharm.jpeg">
+                        </a>
+                    </div>
+                </div>
+            </div>          
         </section>
         <div class="shop-products-cta">
             <p>Shop all products</p>
         </div>
         <footer class="footer">
                 <cite class="footer-quote">
-                    My aim is to make the poor look rich and the rich look poor.</cite>
+                    My aim is to make the poor look rich and the rich look poor.
+                    - Z. Eaton, Head Designer</cite>
             <div class="footer-form">
                 <h4>Stay in touch</h4>
                 <form class="input-container">
