--- a/src/index.html
+++ b/src/index.html
@@ -27,13 +27,13 @@
             </div>          
         </nav>
         <section class="hero">
-            <img class="hero-images" src="assets/images/hero.png" alt="female models in alley" width="1280" height="1024">
+            <img class="hero-images images" src="assets/images/hero.png" alt="female models in alley" width="1280" height="1024">
             <div class="brand-1">
             </div>
         </section> 
         <section class="lookbook">
             <div >
-                <img class="look-images" src="assets/images/lb-hero.jpg" alt="male model in sunglasses" width="1280" height="1024">
+                <img class="look-images images" src="assets/images/lb-hero.jpg" alt="male model in sunglasses" width="1280" height="1024">
             </div>
             <div class="lb-text">
                 <p>Spring 2019 Lookbook</p>
@@ -46,10 +46,20 @@
             </div>
             <div class="product-carousel" id="carousel">
                 <div class="three-across">
-                    <div class="product-1">
-                        <a href#>
-                         <img src="assets/images/wristcharm.jpeg">
+                    <div class="product">
+                        <a href="#">
+                         <img class= "pi-border prod-img-1 images" src="assets/images/redcoat-boots.png">
                         </a>
+                    </div>
+                    <div class="product">
+                            <a href="#">
+                             <img class= "pi-border prod-img-1 images" src="assets/images/redcoat-boots.png">
+                            </a>
+                    </div>
+                    <div class="product">
+                            <a href="#">
+                             <img class= "pi-border prod-img-1 images" src="assets/images/redcoat-boots.png">
+                            </a>
                     </div>
                 </div>
             </div>          
