--- a/src/index.html
+++ b/src/index.html
@@ -53,15 +53,32 @@
                     </div>
                     <div class="product">
                             <a href="#">
-                             <img class= "pi-border prod-img-1 images" src="assets/images/redcoat-boots.png">
+                             <img class= "pi-border prod-img-2 images" src="assets/images/wristcharm.png">
                             </a>
                     </div>
                     <div class="product">
                             <a href="#">
-                             <img class= "pi-border prod-img-1 images" src="assets/images/redcoat-boots.png">
+                             <img class= "pi-border prod-img-3 images" src="assets/images/pinkpurse-girl.png">
                             </a>
                     </div>
                 </div>
+                <div class="three-across">
+                        <div class="product">
+                            <a href="#">
+                             <img class= "pi-border prod-img-4 images" src="assets/images/pexels-photo-1073225.jpeg">
+                            </a>
+                        </div>
+                        <div class="product">
+                                <a href="#">
+                                 <img class= "pi-border prod-img-5 images" src="assets/images/wristcharm.png">
+                                </a>
+                        </div>
+                        <div class="product">
+                                <a href="#">
+                                 <img class= "pi-border prod-img-6 images" src="assets/images/pinkpurse-girl.png">
+                                </a>
+                        </div>
+                    </div>
             </div>          
         </section>
         <div class="shop-products-cta">
